--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,8 +9,13 @@ authors = ["PEDRO BIANCHINI DE QUADROS"]
 [dependencies]
 actix-cors = "0.6.4"
 actix-web = "4.3.1"
+argon2 = "0.5.0"
 chrono = { version = "0.4.26", features = ["serde"] }
+dotenv = "0.15.0"
 env_logger = "0.10.0"
+jsonwebtoken = "8.3.0"
+rand_core = { version = "0.6.4", features = ["std"] }
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.97"
-uuid = { version = "1.3.4", features = ["v4"] }
+sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
+uuid = { version = "1.3.4", features = ["v4", "serde"] }
